# nanoserve

./: .gitignore  CLAUDE.md  DOWNLOAD.md  README.md  block_manager.py  download_model.py  example_simple.py  example_usage.py  integration_example.py  model_executor.py  pyproject.toml  qwen3_weights_info.txt  test_block_manager.py  test_inference.py  test_model_executor.py  test_transformers_eos.py  testbench.py
chatbot/: app.py
chatbot/static/: index.html
core/: __init__.py  block_manager.py  config.py  layers_utils.py  llm_service.py  model_executor.py  model_loader.py  scheduler.py  utils.py
core/backends/: __init__.py  flashinfer_backend.py  metadata.py  torch_backend.py
core/layers/: __init__.py  attention.py  mlp.py
core/model_specific/qwen3/: attention.py  mlp.py
core/models/: __init__.py  qwen3.py
core/models/qwen3/: __init__.py  attention.py  mlp.py  model.py
core/quantization/: __init__.py  awq_linear.py  config.py
core/quantization/cuda/: awq_kernel.cu  awq_kernel.py
docs/: benchmark.md  cuda_graph.md  eager_vs_cg_analysis.md  flashinfer_validation.md  nsys_analysis.md  test_report.md
scripts/: bench.py  download_model.py  example_simple.py  profile_trace.py  profile_wrapper.py  testbench.py
test/: test_block_manager.py  test_cg_vs_eager.py  test_eager_fail.py  test_first_decode_diverges.py  test_gqa.py  test_model_loader.py  test_most_naive.py  test_rope.py  test_short.py  test_transformer_compare.py  test_weight_mapping.py
test_output/: bench_comparison.md  bench_report.md  roadmap_cudagraph.md  trace_operator_breakdown.md  vllm_memory_profile.md
