[project]
name = "nanoserve"
version = "0.1.0"
description = "High-performance LLM inference engine with FlashInfer backend"
authors = [
    { name = "Nanoserve Team", email = "team@nanoserve.ai" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { 
    "torch" = ">=2.0.0",
    "flashinfer-python" = ">=1.0.0",
    "safetensors" = ">=0.4.0",
    "huggingface_hub" = ">=0.19.0"
}